# BIochar_Sim

./: .gitignore  README.md  _update_params.py  pyproject.toml  pytest.ini  requirements.txt  run.py  session_summary_2026-02-06.txt
.github/workflows/: ci.yml
docs/: conventions.md  drl_truth_table.md  fmea.md  hub_go_no_go_report.md  physics_appendix_v1.0_20260205.md
septage_model/: __init__.py
septage_model/analysis/: __init__.py  hub_optimization.py  pathway_scenarios.py  physics_appendix.py  sensitivity.py  sizing.py
septage_model/artifacts/: __init__.py  decision_snapshot.py  facility_design.py  facility_geometry.py  fmea.py  pathway_analysis.py  validation_tasks.py  vendor_email.py  vendor_inbox_monitor.py  vendor_intake.py  vendor_packet.py  vendor_registry.py  versioning.py
septage_model/artifacts/references/: references.json
septage_model/artifacts/schemas/: overnight_response_schema.json
septage_model/ci/: __init__.py  design_readiness.py  gates.py
septage_model/core/: __init__.py  balances.py  parameters.py  pyrolysis_kinetics.py  state.py  stream_pathways.py  thermal_feasibility.py  utils.py
septage_model/simulation/: __init__.py  deterministic.py
tests/: conftest.py  test_ci_gates.py  test_decision_snapshot.py  test_design_physics.py  test_facility_geometry.py  test_facility_integration.py  test_hub_optimization.py  test_operating_envelope.py  test_overnight_validation.py  test_pathway_scenarios.py  test_proof_suite.py  test_units.py
