[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "septage-model"
version = "1.0.0"
description = "Septage-to-biochar facility design simulation with DRL governance"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Kiefer Galliford"},
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "simpy>=4.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
septage-sim = "run:main"

[tool.setuptools.packages.find]
include = ["septage_model*"]

[tool.pytest.ini_options]
markers = [
    "ci: marks tests as CI design gates (deselect with '-m \"not ci\"')",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
